# MazeGen2

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  start.sh
flaskr/: app.py
flaskr/maze_generator/: create_maze.py  plot_image.py
flaskr/static/css/: style.css
flaskr/templates/: index.html
maze_generator/: create_maze.py  directions.py  plot_image.py  solve_maze.py
static/css/: style.css
templates/: index.html
